# ta-freindsurance

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  solution.py  test_solution.py  test_solutions_properties.py
docs/: 02_find_multiplicative_pairs.md
scripts/: run-sql.sh
sql/: 01_Sum_Sales_For_Period.sql  02_Solve_Question_2.sql  03_Solve_Question_3.sql  03_Sum_Sales_And_Pivot.sql  Friendsurance_CreateData.sql
